--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
