--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   }
 }
