--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "sharp": "^0.32.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
