--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
+    "dotenv": "^16.3.1",
     "eslint-plugin-jest-dom": "^5.0.2",
     "eslint-plugin-testing-library": "^6.0.0",
     "jest": "^29.6.3",
